<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ChanExplorer</string>
    <string name="title_activity_main">/4/</string>
    <string name="menu_reply">Post</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_close">Close</string>
    <string name="menu_jump">Jump</string>
    <string name="menu_settings">Settings</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_banned">(USER WAS BANNED FOR THIS POST)</string>
    <string name="text_browse">Browse</string>
    <string name="text_submit">Submit</string>
    <string name="status_banned">You have been banned.</string>
    <string name="status_404">404: Thread no longer exists.</string>
    <string name="status_error">There was an error loading this page.</string>
    <string name="post_btn_thread">Thread</string>
    <string name="post_btn_image">Image</string>
    <string name="post_btn_quote">Quote</string>
    <string name="post_btn_copy">Copy</string>
    <string name="post_btn_links">Links</string>
    <string name="post_btn_replies">Replies</string>
    <string name="post_btn_email">%s</string>
    <string name="text_new_thread">Thread in /%s/</string>
    <string name="text_new_post">Reply to /%1$s/%2$d</string>
    <string name="form_name">Name</string>
    <string name="form_email">E-mail</string>
    <string name="form_subject">Subject</string>
    <string name="form_comment">Comment</string>
    <string name="form_verification">Verification</string>
    <string name="form_pass">4Chan Pass Enabled</string>
    <string name="form_file">File : %s</string>
    <string name="form_recaptcha">reCaptcha</string>
    <string name="form_refresh">Refresh</string>

    <plurals name="postOmitted">
        <item quantity="one">%d post omitted.</item>
        <item quantity="other">%d posts omitted.</item>
    </plurals>
    <plurals name="imagePostOmitted">
        <item quantity="one">%1$d post and %2$s omitted.</item>
        <item quantity="other">%1$d posts and %2$s omitted.</item>
    </plurals>
    <plurals name="imageOmitted">
        <item quantity="one">%d image reply</item>
        <item quantity="other">%d image replies</item>
    </plurals>
    
    <plurals name="auto_updater">
        <item quantity="one">Updating every %1$d %2$s. Press to stop.</item>
        <item quantity="other">Updating every %1$d %2$ss. Press to stop.</item>
    </plurals>

    <string-array name="theme_options">
        <item>Auto</item>
        <item>Yotsuba</item>
        <item>Yotsuba B</item>
        <item>Tomorrow</item>
        <item>Photon</item>
        <item>Holo</item>
    </string-array>
    <string-array name="theme_values">
        <item>Auto</item>
        <item>Yotsuba</item>
        <item>Yotsuba B</item>
        <item>Tomorrow</item>
        <item>Photon</item>
        <item>Holo</item>
    </string-array>
    <string-array name="auto_options">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>
    <string-array name="auto_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preload_options">
        <item>Never</item>
        <item>Wi-Fi Only</item>
        <item>Always</item>
    </string-array>
    <string-array name="preload_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string-array name="textsz_options">
        <item>Small</item>
        <item>Medium</item>
    </string-array>
    <string-array name="textsz_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    
    <string-array name="replies_options">
        <item>Default</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="replies_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string name="default_hidden">s,hc,hm,h,e,u,d,y</string>
    <string-array name="boards_options">
        <item>/3/ - 3DCG</item>
        <item>/a/ - Anime &amp; Manga</item>
        <item>/adv/ - Advice</item>
        <item>/an/ - Animals &amp; Nature</item>
        <item>/b/ - Random</item>
        <item>/c/ - Anime/Cute</item>
        <item>/cgl/ - Cosplay &amp; EGL</item>
        <item>/ck/ - Food &amp; Cooking</item>
        <item>/cm/ - Cute/Male</item>
        <item>/co/ - Comics &amp; Cartoons</item>
        <item>/d/ - Hentai/Alternative</item>
        <item>/diy/ - Do-It-Yourself</item>
        <item>/e/ - Ecchi</item>
        <item>/fa/ - Fashion</item>
        <item>/fit/ - Health &amp; Fitness</item>
        <item>/g/ - Technology</item>
        <item>/gif/ - Animated GIF</item>
        <item>/h/ - Hentai</item>
        <item>/hc/ - Hardcore</item>
        <item>/hm/ - Handsome Men</item>
        <item>/hr/ - High Resolution</item>
        <item>/i/ - Oekaki</item>
        <item>/ic/ - Artwork/Critique</item>
        <item>/int/ - International</item>
        <item>/jp/ - Otaku Culture</item>
        <item>/k/ - Weapons</item>
        <item>/lit/ - Literature</item>
        <item>/m/ - Mecha</item>
        <item>/mlp/ - Pony</item>
        <item>/mu/ - Music</item>
        <item>/n/ - Transportation</item>
        <item>/o/ - Auto</item>
        <item>/p/ - Photography</item>
        <item>/po/ - Papercraft &amp; Origami</item>
        <item>/pol/ - Politically Incorrect</item>
        <item>/q/ - 4chan Discussion</item>
        <item>/r/ - Request</item>
        <item>/r9k/ - ROBOT9001</item>
        <item>/s/ - Sexy Beautiful Women</item>
        <item>/sci/ - Science &amp; Math</item>
        <item>/soc/ - Social</item>
        <item>/sp/ - Sports</item>
        <item>/t/ - Torrents</item>
        <item>/tg/ - Traditional Games</item>
        <item>/toy/ - Toys</item>
        <item>/trv/ - Travel</item>
        <item>/tv/ - Television &amp; Film</item>
        <item>/u/ - Yuri</item>
        <item>/v/ - Video Games</item>
        <item>/vg/ - Video Game Generals</item>
        <item>/vp/ - Pokémon</item>
        <item>/w/ - Anime/Wallpapers</item>
        <item>/wg/ - Wallpapers/General</item>
        <item>/wsg/ - Worksafe GIF</item>
        <item>/x/ - Paranormal</item>
        <item>/y/ - Yaoi</item>
    </string-array>
    <string-array name="boards_values">
        <item>3</item>
        <item>a</item>
        <item>adv</item>
        <item>an</item>
        <item>b</item>
        <item>c</item>
        <item>cgl</item>
        <item>ck</item>
        <item>cm</item>
        <item>co</item>
        <item>d</item>
        <item>diy</item>
        <item>e</item>
        <item>fa</item>
        <item>fit</item>
        <item>g</item>
        <item>gif</item>
        <item>h</item>
        <item>hc</item>
        <item>hm</item>
        <item>hr</item>
        <item>i</item>
        <item>ic</item>
        <item>int</item>
        <item>jp</item>
        <item>k</item>
        <item>lit</item>
        <item>m</item>
        <item>mlp</item>
        <item>mu</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>po</item>
        <item>pol</item>
        <item>q</item>
        <item>r</item>
        <item>r9k</item>
        <item>s</item>
        <item>sci</item>
        <item>soc</item>
        <item>sp</item>
        <item>t</item>
        <item>tg</item>
        <item>toy</item>
        <item>trv</item>
        <item>tv</item>
        <item>u</item>
        <item>v</item>
        <item>vg</item>
        <item>vp</item>
        <item>w</item>
        <item>wg</item>
        <item>wsg</item>
        <item>x</item>
        <item>y</item>
    </string-array>

</resources>